--- a/.github/workflows/backup_nmf.yml
+++ b/.github/workflows/backup_nmf.yml
@@ -40,20 +40,20 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Tweet NMF
-        id: tweet
-        uses: snow-actions/tweet@v1.4.0
-        env:
-          CONSUMER_API_KEY: ${{ secrets.TWITTER_CONSUMER_API_KEY }}
-          CONSUMER_API_SECRET_KEY: ${{ secrets.TWITTER_CONSUMER_API_SECRET_KEY }}
-          ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
-          ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
-        with:
-          status: |
-            La #playlist New Music Friday Italia della settimana è ora disponibile! Inquadra il codice con l'applicazione #Spotify per ascoltarla :-) | #NewMusicFridayItalia #NewMusicFriday
-          media_paths: |
-            nmf_cover.png
-            nmf_spoticode.png
+      #- name: Tweet NMF
+      #  id: tweet
+      #  uses: snow-actions/tweet@v1.4.0
+      #  env:
+      #    CONSUMER_API_KEY: ${{ secrets.TWITTER_CONSUMER_API_KEY }}
+      #    CONSUMER_API_SECRET_KEY: ${{ secrets.TWITTER_CONSUMER_API_SECRET_KEY }}
+      #    ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
+      #    ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+      #  with:
+      #    status: |
+      #      La #playlist New Music Friday Italia della settimana è ora disponibile! Inquadra il codice con l'applicazione #Spotify per ascoltarla :-) | #NewMusicFridayItalia #NewMusicFriday
+      #    media_paths: |
+      #      nmf_cover.png
+      #      nmf_spoticode.png
 
   run-if-failed:
       runs-on: ubuntu-latest
@@ -96,17 +96,17 @@ jobs:
           with:
             github_token: ${{ secrets.GITHUB_TOKEN }}
 
-        - name: Tweet NMF
-          id: tweet
-          uses: snow-actions/tweet@v1.4.0
-          env:
-            CONSUMER_API_KEY: ${{ secrets.TWITTER_CONSUMER_API_KEY }}
-            CONSUMER_API_SECRET_KEY: ${{ secrets.TWITTER_CONSUMER_API_SECRET_KEY }}
-            ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
-            ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
-          with:
-            status: |
-              La #playlist New Music Friday Italia della settimana è ora disponibile! Inquadra il codice con l'applicazione #Spotify per ascoltarla :-) | #NewMusicFridayItalia #NewMusicFriday
-            media_paths: |
-              nmf_cover.png
-              nmf_spoticode.png
+        #- name: Tweet NMF
+        #  id: tweet
+        #  uses: snow-actions/tweet@v1.4.0
+        #  env:
+        #    CONSUMER_API_KEY: ${{ secrets.TWITTER_CONSUMER_API_KEY }}
+        #    CONSUMER_API_SECRET_KEY: ${{ secrets.TWITTER_CONSUMER_API_SECRET_KEY }}
+        #    ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
+        #    ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+        #  with:
+        #    status: |
+        #      La #playlist New Music Friday Italia della settimana è ora disponibile! Inquadra il codice con l'applicazione #Spotify per ascoltarla :-) | #NewMusicFridayItalia #NewMusicFriday
+        #    media_paths: |
+        #      nmf_cover.png
+        #      nmf_spoticode.png
