--- a/.github/workflows/backup_nmf.yml
+++ b/.github/workflows/backup_nmf.yml
@@ -10,17 +10,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4.1.1
 
-      - name: Setup Python Environment
-        uses: actions/setup-python@v4
+      - name: 🐍 Setup Python Environment
+        uses: actions/setup-python@v5.0.0
         with:
-          python-version: 3.9
+          python-version: 3.10
 
-      - name: Install Requirements
+      - name: 💻 Install Requirements
         run: pip install -r requirements.txt
 
-      - name: Execute Python script
+      - name: 💾 Backup Playlist
         run: python nmf.py
         env:
           CLIENT_ID: ${{ secrets.CLIENT_ID }}
@@ -29,7 +29,7 @@ jobs:
           NEW_MUSIC_FRIDAY_ID: ${{ secrets.NEW_MUSIC_FRIDAY_ID }}
           USER_ID: ${{ secrets.USER_ID }}
           
-      - name: Commit updated JSON
+      - name: 📝 Commit updated JSON
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
@@ -40,73 +40,58 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
-      #- name: Tweet NMF
-      #  id: tweet
-      #  uses: snow-actions/tweet@v1.4.0
-      #  env:
-      #    CONSUMER_API_KEY: ${{ secrets.TWITTER_CONSUMER_API_KEY }}
-      #    CONSUMER_API_SECRET_KEY: ${{ secrets.TWITTER_CONSUMER_API_SECRET_KEY }}
-      #    ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
-      #    ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
-      #  with:
-      #    status: |
-      #      La #playlist New Music Friday Italia della settimana è ora disponibile! Inquadra il codice con l'applicazione #Spotify per ascoltarla :-) | #NewMusicFridayItalia #NewMusicFriday
-      #    media_paths: |
-      #      nmf_cover.png
-      #      nmf_spoticode.png
+  # run-if-failed:
+  #     runs-on: ubuntu-latest
+  #     needs: [execute-cron]
+  #     if: always() && (needs.execute-cron.result == 'failure')
+  #     steps:
+  #       - name: Sleep Action
+  #         uses: juliangruber/sleep-action@v2.0.0
+  #         with:
+  #           time: 10m
 
-  run-if-failed:
-      runs-on: ubuntu-latest
-      needs: [execute-cron]
-      if: always() && (needs.execute-cron.result == 'failure')
-      steps:
-        - name: Sleep Action
-          uses: juliangruber/sleep-action@v2.0.0
-          with:
-            time: 10m
+  #       - name: Checkout Code
+  #         uses: actions/checkout@v4.1.1
 
-        - name: Checkout Code
-          uses: actions/checkout@v3
+  #       - name: 🐍 Setup Python Environment
+  #         uses: actions/setup-python@v5.0.0
+  #         with:
+  #           python-version: 3.10
 
-        - name: Setup Python Environment
-          uses: actions/setup-python@v4
-          with:
-            python-version: 3.9
+  #       - name: 💻 Install Requirements
+  #         run: pip install -r requirements.txt
 
-        - name: Install Requirements
-          run: pip install -r requirements.txt
-
-        - name: Execute Python script
-          run: python nmf.py
-          env:
-            CLIENT_ID: ${{ secrets.CLIENT_ID }}
-            CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
-            REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
-            NEW_MUSIC_FRIDAY_ID: ${{ secrets.NEW_MUSIC_FRIDAY_ID }}
-            USER_ID: ${{ secrets.USER_ID }}
+  #       - name: 💾 Backup Playlist
+  #         run: python nmf.py
+  #         env:
+  #           CLIENT_ID: ${{ secrets.CLIENT_ID }}
+  #           CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+  #           REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
+  #           NEW_MUSIC_FRIDAY_ID: ${{ secrets.NEW_MUSIC_FRIDAY_ID }}
+  #           USER_ID: ${{ secrets.USER_ID }}
             
-        - name: Commit updated JSON
-          run: |
-            git config --local user.email "action@github.com"
-            git config --local user.name "GitHub Action"
-            git add json/${{ env.jsn }}
-            git commit -m "${{ env.jsn }} automatic update" -a
-        - name: Push updated JSON
-          uses: ad-m/github-push-action@master
-          with:
-            github_token: ${{ secrets.GITHUB_TOKEN }}
+  #       - name: 📝 Commit updated JSON
+  #         run: |
+  #           git config --local user.email "action@github.com"
+  #           git config --local user.name "GitHub Action"
+  #           git add json/${{ env.jsn }}
+  #           git commit -m "${{ env.jsn }} automatic update" -a
+  #       - name: Push updated JSON
+  #         uses: ad-m/github-push-action@master
+  #         with:
+  #           github_token: ${{ secrets.GITHUB_TOKEN }}
 
-        #- name: Tweet NMF
-        #  id: tweet
-        #  uses: snow-actions/tweet@v1.4.0
-        #  env:
-        #    CONSUMER_API_KEY: ${{ secrets.TWITTER_CONSUMER_API_KEY }}
-        #    CONSUMER_API_SECRET_KEY: ${{ secrets.TWITTER_CONSUMER_API_SECRET_KEY }}
-        #    ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
-        #    ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
-        #  with:
-        #    status: |
-        #      La #playlist New Music Friday Italia della settimana è ora disponibile! Inquadra il codice con l'applicazione #Spotify per ascoltarla :-) | #NewMusicFridayItalia #NewMusicFriday
-        #    media_paths: |
-        #      nmf_cover.png
-        #      nmf_spoticode.png
+  #       - name: Tweet NMF
+  #        id: tweet
+  #        uses: snow-actions/tweet@v1.4.0
+  #        env:
+  #          CONSUMER_API_KEY: ${{ secrets.TWITTER_CONSUMER_API_KEY }}
+  #          CONSUMER_API_SECRET_KEY: ${{ secrets.TWITTER_CONSUMER_API_SECRET_KEY }}
+  #          ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
+  #          ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+  #        with:
+  #          status: |
+  #            La #playlist New Music Friday Italia della settimana è ora disponibile! Inquadra il codice con l'applicazione #Spotify per ascoltarla :-) | #NewMusicFridayItalia #NewMusicFriday
+  #          media_paths: |
+  #            nmf_cover.png
+  #            nmf_spoticode.png
