--- a/.github/workflows/backup_nmf_dance.yml
+++ b/.github/workflows/backup_nmf_dance.yml
@@ -10,12 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4.1.1
 
       - name: 🐍 Setup Python Environment
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5.0.0
         with:
-          python-version: 3.9
+          python-version: 3.10
 
       - name: 💻 Install Requirements
         run: pip install -r requirements.txt
@@ -40,43 +40,43 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
-  run-if-failed:
-      runs-on: ubuntu-latest
-      needs: [execute-cron]
-      if: always() && (needs.execute-cron.result == 'failure')
-      steps:
-        - name: 😴 Wait until retry
-          uses: juliangruber/sleep-action@v2.0.0
-          with:
-            time: 10m
+  # run-if-failed:
+  #     runs-on: ubuntu-latest
+  #     needs: [execute-cron]
+  #     if: always() && (needs.execute-cron.result == 'failure')
+  #     steps:
+  #       - name: 😴 Wait until retry
+  #         uses: juliangruber/sleep-action@v2.0.0
+  #         with:
+  #           time: 10m
 
-        - name: Checkout Code
-          uses: actions/checkout@v3
+  #       - name: Checkout Code
+  #         uses: actions/checkout@v4.1.1
 
-        - name: 🐍 Setup Python Environment
-          uses: actions/setup-python@v4
-          with:
-            python-version: 3.9
+  #       - name: 🐍 Setup Python Environment
+  #         uses: actions/setup-python@v5.0.0
+  #         with:
+  #           python-version: 3.10
 
-        - name: 💻 Install Requirements
-          run: pip install -r requirements.txt
+  #       - name: 💻 Install Requirements
+  #         run: pip install -r requirements.txt
 
-        - name: 💾 Backup Playlist
-          run: python nmf_dance.py
-          env:
-            CLIENT_ID: ${{ secrets.CLIENT_ID }}
-            CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
-            REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
-            NEW_MUSIC_FRIDAY_DANCE_ID: ${{ secrets.NEW_MUSIC_FRIDAY_DANCE_ID }}
-            USER_ID: ${{ secrets.USER_ID }}
+  #       - name: 💾 Backup Playlist
+  #         run: python nmf_dance.py
+  #         env:
+  #           CLIENT_ID: ${{ secrets.CLIENT_ID }}
+  #           CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+  #           REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
+  #           NEW_MUSIC_FRIDAY_DANCE_ID: ${{ secrets.NEW_MUSIC_FRIDAY_DANCE_ID }}
+  #           USER_ID: ${{ secrets.USER_ID }}
             
-        - name: 📝 Commit updated JSON
-          run: |
-            git config --local user.email "action@github.com"
-            git config --local user.name "GitHub Action"
-            git add json/dance/${{ env.jsn }}
-            git commit -m "${{ env.jsn }} automatic update" -a
-        - name: Push updated JSON
-          uses: ad-m/github-push-action@master
-          with:
-            github_token: ${{ secrets.GITHUB_TOKEN }}
+  #       - name: 📝 Commit updated JSON
+  #         run: |
+  #           git config --local user.email "action@github.com"
+  #           git config --local user.name "GitHub Action"
+  #           git add json/dance/${{ env.jsn }}
+  #           git commit -m "${{ env.jsn }} automatic update" -a
+  #       - name: Push updated JSON
+  #         uses: ad-m/github-push-action@master
+  #         with:
+  #           github_token: ${{ secrets.GITHUB_TOKEN }}
