--- a/.github/workflows/test_backup_nmf.yml
+++ b/.github/workflows/test_backup_nmf.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  execute-cron:
+  New-Music-Friday-Backup:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
